working on home

--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,1 +1,5 @@
-$mainFontColor:#fff
+// ========================================= Colors ============================ 
+$mainFontColor:#fff;
+// ========================================= Fonts ============================ 
+$mainFontFamily: 'Lobster',
+cursive;
