--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,74 @@
+nav {
+  background-color: #31A2B7 !important;
+}
+
 header {
   width: 100%;
   height: 100vh;
   background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: "Lobster", cursive;
 }
 
 header h1 {
   color: #fff;
+}
+
+header h2 {
+  color: #fff;
+}
+
+header .ityped-cursor {
+  font-size: 2.2rem;
+  opacity: 1;
+  -webkit-animation: blink 0.3s infinite;
+  animation: blink 0.3s infinite;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+}
+
+@keyframes blink {
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes blink {
+  100% {
+    opacity: 0;
+  }
+}
+
+#topRated {
+  min-height: 100vh;
+  background-color: #EFEFEF;
+  padding: 25px;
+}
+
+#topRated h2 {
+  text-align: center;
+  color: #000;
+  margin: 20px;
+}
+
+#topRated .recent {
+  height: 80vh;
+  max-height: 80vh;
+  overflow: auto;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 10px #31A2B7;
+          box-shadow: 0px 0px 10px #31A2B7;
 }
 /*# sourceMappingURL=style.css.map */
