--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,62 @@
 @import 'variables.scss';
+nav {
+    background-color: #31A2B7 !important;
+}
+
 header {
     width: 100%;
     height: 100vh;
     background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: $mainFontFamily;
     h1 {
         color: $mainFontColor;
+    }
+    h2 {
+        color: $mainFontColor;
+    }
+    .ityped-cursor {
+        font-size: 2.2rem;
+        opacity: 1;
+        -webkit-animation: blink 0.3s infinite;
+        -moz-animation: blink 0.3s infinite;
+        animation: blink 0.3s infinite;
+        animation-direction: alternate;
+    }
+    @keyframes blink {
+        100% {
+            opacity: 0;
+        }
+    }
+    @-webkit-keyframes blink {
+        100% {
+            opacity: 0;
+        }
+    }
+    @-moz-keyframes blink {
+        100% {
+            opacity: 0;
+        }
+    }
+}
+
+#topRated {
+    min-height: 100vh;
+    background-color: #EFEFEF;
+    padding: 25px;
+    h2 {
+        text-align: center;
+        color: #000;
+        margin: 20px;
+    }
+    .recent {
+        height: 80vh; // to be removed when it has content
+        max-height: 80vh;
+        overflow: auto;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px #31A2B7;
     }
 }
