--- a/Pages/news/css/news.css
+++ b/Pages/news/css/news.css
@@ -1,4 +1,43 @@
+nav {
+  background-color: #31A2B7 !important;
+}
+
 #sidelink {
   padding-bottom: 5px;
+}
+
+#news {
+  min-height: 100vh;
+  background-color: #EFEFEF;
+  padding: 25px;
+}
+
+#news h3 {
+  font-family: "Lobster", cursive;
+  text-align: center;
+  color: #030303;
+  margin: 20px;
+}
+
+#news .recent {
+  height: 80vh;
+  max-height: 80vh;
+  overflow: auto;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 10px #31A2B7;
+          box-shadow: 0px 0px 10px #31A2B7;
+}
+
+#con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#ad1 {
+  padding-left: 20px;
 }
 /*# sourceMappingURL=news.css.map */
