--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,5 +1,8 @@
 // ========================================= Colors ============================ 
-$mainFontColor:#fff;
+$mainFontColor:rgb(19, 18, 18);
+$mainbgcolor: #31A2B7;
 // ========================================= Fonts ============================ 
-$mainFontFamily: 'Lobster',
+$mainHeadersFont: 'Lobster',
 cursive;
+// ========================================= border ============================ 
+$borderRaduis: 7px;
