--- a/Pages/news/css/news.css
+++ b/Pages/news/css/news.css
@@ -1,34 +1,33 @@
 nav {
-  background-color: #31A2B7 !important;
+    background-color: #31A2B7 !important;
 }
 
-#sidelink {
-  padding-bottom: 5px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Lobster", cursive;
 }
 
 #news {
-  min-height: 100vh;
-  background-color: #EFEFEF;
-  padding: 25px;
+    min-height: 100vh;
+    padding: 25px;
 }
 
 #news h3 {
-  font-family: "Lobster", cursive;
-  text-align: center;
-  color: #030303;
-  margin: 20px;
+    text-align: center;
+    margin: 20px;
 }
 
 #news .recent {
-  height: 80vh;
-  max-height: 80vh;
-  overflow: auto;
-  background-color: #fff;
-  -webkit-box-shadow: 0px 0px 10px #31A2B7;
-          box-shadow: 0px 0px 10px #31A2B7;
+    height: 80vh;
+    max-height: 80vh;
+    overflow: auto;
+    -webkit-box-shadow: 0px 0px 10px #31A2B7;
+    box-shadow: 0px 0px 10px #31A2B7;
 }
 
-#ad1 {
-  padding-left: 20px;
-}
+
 /*# sourceMappingURL=news.css.map */
