--- a/css/style.scss
+++ b/css/style.scss
@@ -6,18 +6,17 @@ nav {
 header {
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: #000;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: $mainFontFamily;
-    h1 {
-        color: $mainFontColor;
-    }
-    h2 {
-        color: $mainFontColor;
-    }
+    font-family: $mainHeadersFont;
+    color: #fff;
+    // h1 {}
+    // h2 {
+    //     color: $mainFontColor;
+    // }
     .ityped-cursor {
         font-size: 2.2rem;
         opacity: 1;
@@ -47,6 +46,7 @@ header {
     min-height: 100vh;
     background-color: #EFEFEF;
     padding: 25px;
+    font-family: $mainHeadersFont;
     h2 {
         text-align: center;
         color: #000;
@@ -59,4 +59,31 @@ header {
         background-color: #fff;
         box-shadow: 0px 0px 10px #31A2B7;
     }
+}
+
+#contact {
+    width: 100%;
+    height: 100vh;
+    background-color: #000;
+    font-family: $mainHeadersFont;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+}
+
+.copy {
+    background-color: #000;
+    text-align: center;
+    color: #fff;
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border: solid 3px #31A2B7;
+}
+
+.copy a {
+    color: #fff;
+    text-decoration: none;
 }
