--- a/Pages/login/style.css
+++ b/Pages/login/style.css
@@ -1,43 +1,50 @@
-body{
+body {
     background-color: black;
     background-image: url(https://pic.i7lm.com/wp-content/uploads/2019/09/3-20-780x405.jpg);
     background-size: cover;
-    margin:0;
+    margin: 0;
     padding: 0;
-    
-    
 }
-.container{
+
+nav {
+    background-color: #31A2B7 !important;
+}
+
+.container {
     width: 100vw;
     height: 100vh;
     text-align: center;
 }
-.form{
-    width: 30%;
-background-color: darkslategray;
 
-     margin:20%  auto; 
-    padding: 20px;
+.form {
+    width: 30%;
+    background-color: #236a77;
+    margin: 20% auto;
+    padding: 50px 20px;
     display: inline-block;
     text-align: left;
     margin-top: 10%;
     border-radius: 10px;
+    position: relative;
 }
-[type="submit"]{
 
-position: absolute;
-object-position: center;
-
-}
-#but{
-
-object-position: center;
-
-
-
-
-
+.form img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    top: -20px;
+    left: 44%;
 }
 
 
+/* [type="submit"] {
+    position: absolute;
+    object-position: center;
+} */
 
+
+/* 
+#but {
+    object-position: center;
+} */
