Fix lang class bug

--- a/css/style.css
+++ b/css/style.css
@@ -101,4 +101,17 @@ header .ityped-cursor {
   color: #fff;
   text-decoration: none;
 }
+
+#news div {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 10px;
+  border: 1px solid #31A2B7;
+  margin: 15px;
+  border-radius: 10px;
+}
+
+#news div h3 {
+  text-align: center;
+  text-shadow: 0px 0px 20px #31A2B7;
+}
 /*# sourceMappingURL=style.css.map */
