--- a/Pages/news/css/news.css
+++ b/Pages/news/css/news.css
@@ -2,6 +2,19 @@ nav {
   background-color: #31A2B7 !important;
 }
 
+nav #ar,
+nav #en {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 5px;
+  cursor: pointer;
+}
+
+nav .dropdown-menu {
+  text-align: center;
+}
+
 h1,
 h2,
 h3,
@@ -27,5 +40,59 @@ h6 {
   overflow: auto;
   -webkit-box-shadow: 0px 0px 10px #31A2B7;
           box-shadow: 0px 0px 10px #31A2B7;
+}
+
+#recent div {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 10px;
+  border: 1px solid #31A2B7;
+  margin: 15px;
+  border-radius: 10px;
+}
+
+#recent div h3 {
+  text-align: center;
+  text-shadow: 0px 0px 20px #31A2B7;
+}
+
+#footer {
+  background-color: #000;
+  min-height: 60px;
+  color: #fff;
+  text-align: center;
+}
+
+#footer .followUs i {
+  padding: 5px;
+  margin: 5px;
+  -webkit-transition: all;
+  transition: all;
+  -webkit-transition-duration: .25s;
+          transition-duration: .25s;
+  margin-top: 12px;
+  font-size: 20px;
+}
+
+#footer .followUs i:hover {
+  color: #31A2B7;
+}
+
+#footer .copy {
+  margin-top: 12px;
+}
+
+#footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#footer #ar,
+#footer #en {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 5px;
+  margin-left: 10px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=news.css.map */
