--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,13 @@ nav {
   background-color: #31A2B7 !important;
 }
 
+nav img {
+  height: 40px;
+}
+
 header {
   width: 100%;
-  margin-top: 60px;
+  margin-top: 70px;
   height: 100px;
   background-color: #000;
   display: -webkit-box;
