--- a/Pages/news/css/news.scss
+++ b/Pages/news/css/news.scss
@@ -1,4 +1,8 @@
 @import '../../../css/variables.scss';
+.hide {
+    display: none;
+}
+
 nav {
     background-color: #31A2B7 !important;
     #ar,
