--- a/Pages/login/style.css
+++ b/Pages/login/style.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+nav img {
+    height: 40px;
+}
+
 body {
     background-color: black;
     background-image: url(https://pic.i7lm.com/wp-content/uploads/2019/09/3-20-780x405.jpg);
@@ -39,6 +43,47 @@ nav {
     position: absolute;
     top: -20px;
     left: 44%;
+}
+
+#footer {
+    background-color: #000;
+    min-height: 60px;
+    color: #fff;
+    text-align: center;
+}
+
+#footer .followUs i {
+    padding: 5px;
+    margin: 5px;
+    -webkit-transition: all;
+    transition: all;
+    -webkit-transition-duration: .25s;
+    transition-duration: .25s;
+    margin-top: 12px;
+    font-size: 20px;
+}
+
+#footer .followUs i:hover {
+    color: #31A2B7;
+}
+
+#footer .copy {
+    margin-top: 12px;
+}
+
+#footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#footer #ar,
+#footer #en {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    padding: 5px;
+    margin-left: 10px;
+    cursor: pointer;
 }
 
 
