--- a/Pages/login/style.css
+++ b/Pages/login/style.css
@@ -19,8 +19,8 @@ nav {
 }
 
 .container {
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh;*/
     text-align: center;
 }
 
@@ -85,15 +85,3 @@ nav {
     margin-left: 10px;
     cursor: pointer;
 }
-
-
-/* [type="submit"] {
-    position: absolute;
-    object-position: center;
-} */
-
-
-/* 
-#but {
-    object-position: center;
-} */
