modification in profile page

--- a/Pages/profie/profile.css
+++ b/Pages/profie/profile.css
@@ -42,3 +42,25 @@ nav {
     margin-left: 10px;
     cursor: pointer;
 }
+
+p{
+
+text-align: center;
+font-size: larger;
+
+}
+.img1{
+
+    justify-content: center;
+    align-items: center;
+
+
+
+
+}
+
+
+
+   
+
+
