--- a/Pages/news/css/news.scss
+++ b/Pages/news/css/news.scss
@@ -45,6 +45,11 @@ h6 {
         overflow: auto;
         box-shadow: 0px 0px 10px #31A2B7;
     }
+    i {
+        padding: 5px;
+        font-size: 22px;
+        cursor: pointer;
+    }
 }
 
 #recent div {
