--- a/Pages/news/css/news.scss
+++ b/Pages/news/css/news.scss
@@ -35,6 +35,8 @@ h6 {
 #news {
     min-height: 100vh;
     padding: 25px;
+    font-family: $mainHeadersFont;
+    background-color: #EFEFEF;
     h3 {
         text-align: center;
         margin: 20px;
