--- a/Pages/profie/profile.css
+++ b/Pages/profie/profile.css
@@ -2,11 +2,15 @@ nav {
     background-color: #31A2B7 !important;
 }
 
+.hide {
+    display: none;
+}
+
 nav img {
     height: 40px;
 }
 
-section {
+.img {
     text-align: center;
 }
 
