--- a/Pages/login/style.css
+++ b/Pages/login/style.css
@@ -6,8 +6,24 @@ nav img {
     height: 40px;
 }
 
+
+/* Chrome, Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
+/* Firefox */
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 body {
-    background-color: black;
+    /* background-color: black; */
     background-image: url(https://pic.i7lm.com/wp-content/uploads/2019/09/3-20-780x405.jpg);
     background-size: cover;
     margin: 0;
@@ -84,4 +100,11 @@ nav {
     padding: 5px;
     margin-left: 10px;
     cursor: pointer;
+}
+
+@media (max-width: 720px) {
+    .form {
+        margin-top: 100px;
+        width: 90%;
+    }
 }
